`MaxPermSize` was replaced by `MaxMetaspaceSize`